--- a/src/components/GuessNumber.module.css
+++ b/src/components/GuessNumber.module.css
@@ -14,11 +14,3 @@ section {
     cursor: wait;
   }
 }
-
-.input {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-}
